--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "framer-motion": "^11.2.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-scramble": "^2.2.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
